[gd_scene load_steps=4 format=3 uid="uid://d1ml7pnps4lc7"]

[ext_resource type="Script" path="res://game/intermission/spellbook/ui_pages/perk_page.gd" id="1_l4r0j"]
[ext_resource type="Texture2D" uid="uid://badqk4r3pjhs7" path="res://perks/icons/shitty_default_perk_icon.png" id="2_pi21j"]

[sub_resource type="LabelSettings" id="LabelSettings_nx330"]
font_size = 32

[node name="PerkPage" type="VBoxContainer"]
script = ExtResource("1_l4r0j")

[node name="PerkButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Title" type="Label" parent="PerkButtonContainer"]
layout_mode = 2
text = "Select a Perk"
label_settings = SubResource("LabelSettings_nx330")
horizontal_alignment = 1

[node name="PerkButton1" type="Button" parent="PerkButtonContainer"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(416, 192)
layout_mode = 2
theme_override_font_sizes/font_size = 32
icon = ExtResource("2_pi21j")
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="PerkButtonContainer/PerkButton1"]
z_index = -1
custom_minimum_size = Vector2(420, 196)
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 418.0
offset_bottom = 138.0
mouse_filter = 2

[node name="PerkDescriptionLabel1" type="RichTextLabel" parent="PerkButtonContainer/PerkButton1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(288, 192)
layout_mode = 2
offset_left = 128.0
offset_right = 416.0
offset_bottom = 128.0
mouse_filter = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[center]Immediately receive [color=d5a6bd]+5 [img=16]res://perks/icons/shitty_runes_icon.png[/img] Runes[/color].[/center]"
autowrap_mode = 2

[node name="PerkButton2" type="Button" parent="PerkButtonContainer"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(416, 192)
layout_mode = 2
theme_override_font_sizes/font_size = 32
icon = ExtResource("2_pi21j")
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="PerkButtonContainer/PerkButton2"]
z_index = -1
custom_minimum_size = Vector2(420, 196)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -82.0
offset_right = 210.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PerkDescriptionLabel2" type="RichTextLabel" parent="PerkButtonContainer/PerkButton2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(288, 192)
layout_mode = 2
offset_left = 128.0
offset_right = 416.0
offset_bottom = 128.0
mouse_filter = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[center]Immediately receive [color=d5a6bd]+5 [img=16]res://perks/icons/shitty_runes_icon.png[/img] Runes[/color].[/center]"
autowrap_mode = 2

[node name="PerkButton3" type="Button" parent="PerkButtonContainer"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(416, 192)
layout_mode = 2
theme_override_font_sizes/font_size = 32
icon = ExtResource("2_pi21j")
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="PerkButtonContainer/PerkButton3"]
z_index = -1
custom_minimum_size = Vector2(420, 196)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -82.0
offset_right = 210.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PerkDescriptionLabel3" type="RichTextLabel" parent="PerkButtonContainer/PerkButton3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(288, 192)
layout_mode = 2
offset_left = 128.0
offset_right = 416.0
offset_bottom = 128.0
mouse_filter = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[center]Immediately receive [color=d5a6bd]+5 [img=16]res://perks/icons/shitty_runes_icon.png[/img] Runes[/color].[/center]"
autowrap_mode = 2
